@@ -37,6 +37,10 @@ Version 0.7.5 UNRELEASED
   * [cmdline] When simulating, add notice before confirmation to continue
     actions (Closes: #173277)
 
+  * [cmdline] For "search", use candidate or, if does not exist, current version
+    rather than a random version to show information about the package
+    (Closes: #490593)
+
 - User visible changes:
 
   * [cmdline] Minor improvements to help (Closes: #497136)
